--- a/trms-back/src/main/resources/database.properties
+++ b/trms-back/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/postgres?currentSchema=trms_app
+url=jdbc:postgresql://localhost:5432/postgres?currentSchema=trms1_app
 usr=postgres
 psw=Lebron1021
 drv=org.postgresql.Driver
